<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.andoid.myapp.MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/mj" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_text_view"
            android:layout_marginTop="@dimen/margin_top_text_view"
            android:contentDescription="@string/location"
            android:fontFamily="sans-serif"
            android:text="@string/h2_text"
            android:textAllCaps="true"
            android:textColor="@color/h2_color"
            android:textSize="@dimen/h2_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_left_text_view"
            android:layout_marginRight="@dimen/margin_right_text_view"
            android:background="@color/h2_color" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_text_view"
            android:layout_marginTop="@dimen/margin_top_text_view"
            android:contentDescription="@string/location"
            android:drawableLeft="@drawable/location_24dp"
            android:drawablePadding="@dimen/padding_drawble"
            android:text="@string/location"
            android:textColor="@color/text_color"
            android:textSize="@dimen/main_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_text_view"
            android:layout_marginTop="@dimen/margin_top_text_view"
            android:contentDescription="@string/location"
            android:drawableLeft="@drawable/phone_24dp"
            android:drawablePadding="@dimen/padding_drawble"
            android:text="@string/phone_number"
            android:textColor="@color/text_color"
            android:textSize="@dimen/main_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_text_view"
            android:layout_marginTop="@dimen/margin_top_text_view"
            android:contentDescription="@string/location"
            android:drawableLeft="@drawable/daily_24dp"
            android:drawablePadding="@dimen/padding_drawble"
            android:text="@string/daily_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/main_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_text_view"
            android:layout_marginTop="@dimen/margin_top_text_view"
            android:contentDescription="@string/location"
            android:drawableLeft="@drawable/email_24dp"
            android:drawablePadding="@dimen/padding_drawble"
            android:text="@string/e_mail"
            android:textColor="@color/text_color"
            android:textSize="@dimen/main_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_text_view"
            android:layout_marginTop="@dimen/margin_top_text_view"
            android:autoLink="web"
            android:contentDescription="@string/location"
            android:drawableLeft="@drawable/site_24dp"
            android:drawablePadding="@dimen/padding_drawble"
            android:text="@string/site_address"
            android:textColor="@color/text_color"
            android:textSize="@dimen/main_text_size" />

    </LinearLayout>
</ScrollView>